# AetherPackBot

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
AetherPackBot/: __init__.py
AetherPackBot/agent/: __init__.py  runner.py  tools.py
AetherPackBot/api/: __init__.py
AetherPackBot/cli/: __init__.py  __main__.py  main.py
AetherPackBot/config/: __init__.py  defaults.py  manager.py
AetherPackBot/core/: __init__.py  app_kernel.py  kernel.py  logging.py
AetherPackBot/core/agent/: __init__.py  orchestrator.py  runner.py
AetherPackBot/core/api/: __init__.py  agents.py  events.py  platforms.py  plugins.py
AetherPackBot/core/cli/: main.py
AetherPackBot/core/extensions/: __init__.py  core.py  python_executor.py  web_search.py
AetherPackBot/core/kernel/: __init__.py  app_kernel.py  logging.py  paths.py
AetherPackBot/core/messaging/: __init__.py  events.py  processor.py
AetherPackBot/core/platform/: __init__.py  manager.py  qq_onebot.py
AetherPackBot/core/plugin/: Rfc.py  __init__.py  manager.py
AetherPackBot/core/provider/: __init__.py  base.py  manager.py
AetherPackBot/core/storage/: __init__.py  config.py  database.py
AetherPackBot/dashboard/: __init__.py  server.py
AetherPackBot/gateway/: __init__.py  base.py  registry.py  session.py
AetherPackBot/intellect/: __init__.py  base.py  registry.py
AetherPackBot/kernel/: __init__.py  app_kernel.py  bootstrap.py  builtin_middlewares.py  container.py  logging.py  middleware.py  signal_hub.py
AetherPackBot/message/: __init__.py  components.py  event.py  types.py
AetherPackBot/pack/: __init__.py  base.py  hooks.py  loader.py  manifest.py
AetherPackBot/storage/: config.py  database.py
AetherPackBot/store/: __init__.py  engine.py  kv.py  models.py
AetherPackBot/utils/: __init__.py  io.py  logging.py  paths.py
AetherPackBot/web/: __init__.py  app.py  auth.py  routes.py
AetherPackBot/webapi/: server.py
aetherpackbot/: __init__.py
aetherpackbot/agents/: __init__.py  orchestrator.py  runner.py
aetherpackbot/cli/: main.py
aetherpackbot/extensions/: core.py  python_executor.py  web_search.py
aetherpackbot/kernel/: __init__.py  app_kernel.py  lifecycle.py  logging.py
aetherpackbot/messaging/: __init__.py  events.py  processor.py
aetherpackbot/plugins/: __init__.py  manager.py
aetherpackbot/protocols/: __init__.py  events.py  platforms.py  plugins.py
aetherpackbot/providers/: __init__.py  base.py  manager.py
aetherpackbot/storage/: __init__.py  config.py  database.py
aetherpackbot/webapi/: __init__.py  server.py
core/: __init__.py
core/agent/: __init__.py  orchestrator.py  runner.py
core/api/: __init__.py  events.py  platforms.py  plugins.py
core/cli/: __init__.py  main.py
core/extensions/: core.py  python_executor.py  web_search.py
core/kernel/: __init__.py  app_kernel.py  logging.py
core/messaging/: __init__.py  events.py  processor.py
core/platform/: __init__.py  manager.py  qq_onebot.py
core/plugin/: __init__.py  manager.py
core/provider/: __init__.py  base.py  manager.py
core/storage/: __init__.py  config.py  database.py
core/webapi/: __init__.py  server.py
dashboard/: .pnp.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
data/: .deps_installed  aetherpackbot.db
data/config/: config.json
data/storage/: aetherpackbot.db
(+58 files in other folders)
