[project]
name = "AetherPackBot"
version = "1.0.0"
description = "Multi-platform LLM chatbot and development framework"
readme = "README.md"
requires-python = ">=3.10"

keywords = ["AetherPackBot", "Chatbot", "LLM", "AI Assistant"]

dependencies = [
  # 异步框架
  "aiohttp>=3.11.0",
  "aiosqlite>=0.21.0",
  "asyncio>=3.4.3",
  # LLM 提供商
  "openai>=1.50.0",
  "anthropic>=0.45.0",
  "google-genai>=1.50.0",
  # Web 框架
  "quart>=0.20.0",
  "quart-cors>=0.8.0",
  "pyjwt>=2.10.0",
  # 数据库
  "sqlalchemy[asyncio]>=2.0.35",
  "sqlmodel>=0.0.22",
  # 平台适配器
  "python-telegram-bot>=22.0",
  "py-cord>=2.6.0",
  "aiocqhttp>=1.4.4",
  "qq-botpy>=1.2.1",
  "dingtalk-stream>=0.22.0",
  "lark-oapi>=1.4.0",
  "slack-sdk>=3.35.0",
  # 工具库
  "pydantic>=2.10.0",
  "colorlog>=6.9.0",
  "pillow>=11.0.0",
  "beautifulsoup4>=4.13.0",
  "apscheduler>=3.11.0",
  "psutil>=5.8.0",
  "click>=8.2.0",
  "aiofiles>=25.1.0",
  "watchfiles>=1.0.0",
  "websockets>=15.0.0",
  "tenacity>=9.1.0",
  # 文档处理
  "pypdf>=6.0.0",
  "rank-bm25>=0.2.2",
  "jieba>=0.42.0",
  # 向量嵌入
  "faiss-cpu>=1.10.0",

  "uvicorn >= 0.34.0",
  "fastapi>=0.128.7",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.15.0",
]

[project.scripts]
aetherpackbot = "AetherPackBot.cli.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "F",     # Pyflakes 规则
  "W",     # pycodestyle 警告
  "E",     # pycodestyle 错误
  "I",     # 导入顺序
  "UP",    # pyupgrade 规则
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
